# yamotd

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  SUMMARY.md  client  client.h  hello  hello_world.cpp  main_client.cpp  main_server.cpp  messages.txt  server
P1_docs/: cis427f20-P1.doc
P1_docs/sampleP1/: client.c  client_demo.cpp  server.c  server_demo.cpp
P2_docs/: cis427f20-P2.doc
P2_docs/sampleP2/: server_demo.cpp
docs/html/: index.html
docs/latex/: refman.tex
include/client/: client.h
include/server/: connection.h  quotedb.h  server.h
src/: client.cpp  helper.hpp  quotedb.cpp  server.cpp
tests/: catch_config_main.cpp  quotedb_test.cpp  server_test.cpp  test_quotes.txt
